--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="tm-header">
             <div class="container-fluid">
                 <div class="tm-header-inner">
-                    <a href="#" class="navbar-brand tm-site-name">Classic</a>
+                    <a href="#" class="navbar-brand tm-site-name">华望世纪</a>
                     
                     <!-- navbar -->
                     <nav class="navbar tm-main-nav">
